# guelp

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: auth.py  boostrap.py  config.py  database.py  logger.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 1f02dc62ed2c_assign_admin_role_to_admin_user.py  4ca8d306b124_school_migration.py  67a4d860c757_init.py  a1b2c3d4e5f6_seed_default_user.py  b2c3d4e5f6a7_seed_roles_permissions.py  c3d4e5f6a8b9_seed_school_demo_data.py  d4e5f6a9b0c1_assign_demo_enrollments.py  e5f6a9b0c2d3_refresh_demo_assignments.py  f6a7b8c9d0e1_add_grade_to_qualification.py
backend/src/models/: __init__.py  classes.py  classroom_subject.py  classroom_subject_relation.py  classroom_subject_student.py  classrooms.py  files.py  permission.py  qualifications.py  role.py  role_permission_relation.py  students.py  subjects.py  teachers.py  user.py  user_role_relation.py
backend/src/models/base/: base_int_model.py  base_int_model_without_date.py  base_model.py  base_uuid_model.py
backend/src/persistence/: unit_of_work.py  user_unit_work.py
backend/src/persistence/repositories/: base_repository.py  classes_repository.py  classroom_repository.py  classroom_subject_repository.py  files_repository.py  (+11 more)
backend/src/routes/: auth.py  classroom_subject.py  classroom_subject_student.py  classrooms.py  roles.py  roles_permissions.py  students.py  subjects.py  teachers.py  users.py
backend/src/schemas/: s3.py
backend/src/services/: auth.py  s3.py
(+192 files in other folders)
