[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "cryptography>=45.0.5",
    "fastapi>=0.120.0",
    "jose>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.27",
    "tzdata>=2025.2",
    "uvicorn>=0.38.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=3.2,<4.0",
    "boto3>=1.38.45"
]
